--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "heroku": "^7.48.0",
     "nodemon": "^2.0.7"
   },
   "repository": {
