--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "heroku": "^7.48.0",
+    "node": "^15.8.0",
     "nodemon": "^2.0.7"
   },
   "repository": {
