--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "heroku": "^7.2.0",
-    "node": "^15.8.0",
+    "node": "^14.x",
     "nodemon": "^2.0.7"
   },
   "repository": {
